Hotfix layout bugs

--- a/assets/sass/components/_btn.sass
+++ b/assets/sass/components/_btn.sass
@@ -11,6 +11,7 @@
   border: 2px solid
   border-radius: 2rem
   display: inline-block
+  transition: all 200ms
 
 .btn-outline
   border-color: #fff
@@ -18,6 +19,7 @@
   &:hover
     background-color: #fff
     color: #232731
+    transition: all 500ms
 
 .btn-lg
   font-size: $font-size-h4
